# HotCrossBuns

./: .gitignore  CMakeLists.txt  HotStuff.md  PROTOCOL.md  README.md
app/: client.cpp  main.cpp  server.cpp
incl/: hcb.h
incl/comms/: node.hpp  replica.hpp
incl/hotbuns/: utils.hpp
src/: hcb.cpp
src/comms/: node.cpp  replica.cpp
src/hotbuns/: hotstuff.cpp  utils.cpp
